edited display issue on mobile phone

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -129,5 +129,9 @@ a {
     .portrait {
         width: 300px;
     }
+
+    .bottom-left {
+        font-size: 0.3rem;
+    }
 }
 
